--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.20</version>
+			<version>1.16.22</version>
 		</dependency>
 		<!-- Test scoped dependencies -->
 		<dependency>
@@ -73,8 +73,8 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.mockito</groupId>
-		    <artifactId>mockito-all</artifactId>
-		    <version>1.10.18</version>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.15.0</version>
 		    <scope>test</scope>
 		</dependency>
 	</dependencies>
