--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugin</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.12</version>
+			    <configuration>
+			       <suiteXmlFiles>
+			           <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+			       </suiteXmlFiles>
+			    </configuration> 
+			</plugin>
 		</plugins>
 	</build>
 
